[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemies/SmallPirate.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/big_dead.wav" type="AudioStream" id=3]
[ext_resource path="res://enemies/BigPirate.gd" type="Script" id=4]
[ext_resource path="res://enemies/shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://enemies/big_hurt.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 0.5 ), Vector2( 0.75, 1.5 ), Vector2( 1.2, 0.9 ), Vector2( 0.95, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 22.0

[node name="BigPirate" instance=ExtResource( 2 )]
script = ExtResource( 4 )
max_speed = 5.0
score = 2000
rareness = 5

[node name="Sprite" parent="." index="1"]
rotation = 0.174533
region_rect = Rect2( 128, 0, 96, 48 )

[node name="AnimationPlayer" parent="Sprite" index="0"]
anims/hurt = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( -1, 2 )
shape = SubResource( 2 )

[node name="Light2D" parent="." index="3"]
scale = Vector2( 1.6, 1.6 )
texture_scale = 0.2

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="." index="5"]
wait_time = 4.0
autostart = true

[node name="Shoot" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 5 )
max_distance = 1000.0
bus = "sfx"

[node name="Dead" parent="." index="7"]
stream = ExtResource( 3 )

[node name="Explosion" parent="." index="8"]
scale = Vector2( 2, 2 )

[node name="Hurt" type="AudioStreamPlayer2D" parent="." index="9"]
stream = ExtResource( 6 )
max_distance = 500.0
bus = "sfx"
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
